src/test/deca/codegen/invalid/SansObjet/ArithmeticFloatOverflow-ConvFloat.deca
// Description:
//    Overflow for a conversion from a float to an int
//
// Results:
//     ERROR: float_arithmetic_overflow
//
// History:
//    created on 14/01/2022

{
    int x = 33554434;
    float y = (float) (x); // 2^25 + 2
    print(y);
}
